Updated .gitignore and fixed Expo warnings

--- a/smartstart/.gitignore
+++ b/smartstart/.gitignore
@@ -5,8 +5,18 @@ node_modules/
 
 # Expo
 .expo/
+.expo-shared/
+node_modules/
 dist/
 web-build/
+*.log
+*.lock
+.env
+*.keystore
+*.jks
+*.p12
+.DS_Store
+Thumbs.db
 expo-env.d.ts
 
 # Native
