`Refactor app layout and remove unused index.jsx file`

--- a/smartstart/package.json
+++ b/smartstart/package.json
@@ -63,5 +63,9 @@
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
+  "prettier": {
+  "singleQuote": true,
+  "trailingComma": "es5"
+},
   "private": true
 }
